add Back button

--- a/templates/result.html
+++ b/templates/result.html
@@ -64,9 +64,7 @@
 			            <!-- Collect the nav links, forms, and other content for toggling -->
 			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-			                    <li class=" scroll active"><a href="#home">home</a></li>
-			                    <li class="scroll"><a href="#about">About</a></li>
-			                    <li class="scroll"><a href="#comment-section">contact</a></li>
+			                    <li class="scroll"><a href="/">Back</a></li>
 			                </ul><!--/.nav -->
 			            </div><!-- /.navbar-collapse -->
 			        </div><!--/.container-->
